2010-12-16  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #14402: XSS in Install tool (thanks to Benjamin Mack)
	* Fixed bug #16590: t3lib_TSparser::checkIncludeLines() does not check files to be included (thanks to Fabrizio Branca)

2010-12-07  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16696: [Caching framework] unit tests: Fatal error in t3lib_cache_backend_dbbackendTest due to call to undefined method

2010-12-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16675: htmlArea RTE: Incorrect result when inserting horizontal rule in FF and WebKit

2010-12-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16058: htmlArea RTE: Overlay to choose a color exceeds the viewport if many colors are defined

2010-01-01  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #16604: Changes in workspace are not shown automatically in pagetree
	* Fixed bug #15495: Pagetree fails to reload

2010-11-30  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16581: Make jsFooterInline & jsFooterLibs available to render-preProcess hook (Thanks to Morton Jonuschat)

2010-11-30  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #16501: DBAL does not support multi-column indexes in create table queries

2010-11-30  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16614: common.js resets TYPO3 namespace (Thanks to Peter Kühn)

2010-11-29  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #15189: Frontend Editing edit panels are shown for content element types that cannot be edited

2010-11-29  Francois Suter  <francois@typo3.org>

	* Fixed bug #16583: Localization overview has no color-coded status anymore

2010-11-26  Francois Suter  <francois@typo3.org>

	* Fixed bug #16573: Register count_MENUOBJ is not properly initialized

2010-11-26  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16321: [scheduler] Numeric zero for representation of weekday sunday is not accepted (Thanks to Marcus Krause)